# fastapi-sia

./: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 7bf72d8720e1_obscore_table.py
fastapi_sia/: dependencies.py  exceptions.py  main.py  middleware.py  models.py  responses.py  service.py  settings.py
fastapi_sia/obscore/: db_models.py  types.py  utils.py
fastapi_sia/router/: sia_router.py
postgres-q3c/: Dockerfile
